--- a/新建 文本文档.html
+++ b/新建 文本文档.html
@@ -1,57 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>模拟交易所</title>
+  <title>我的第一个网页</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f5f7fa;
-    }
-    .navbar {
-      background-color: #1e1e2f;
-      color: white;
-      padding: 15px 30px;
+      font-family: Arial, sans-serif;
+      background: #f0f8ff;
       display: flex;
-      justify-content: space-between;
+      flex-direction: column;
       align-items: center;
-    }
-    .navbar h1 {
+      justify-content: center;
+      height: 100vh;
       margin: 0;
-      font-size: 24px;
     }
-    .balance-container {
-      margin: 40px auto;
-      padding: 30px;
-      max-width: 500px;
-      background-color: white;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      border-radius: 10px;
-      text-align: center;
+    h1 {
+      color: #333;
     }
-    .balance-label {
-      font-size: 20px;
-      color: #555;
-      margin-bottom: 10px;
-    }
-    .balance-value {
-      font-size: 40px;
-      font-weight: bold;
-      color: #28a745;
+    p {
+      font-size: 18px;
+      color: #666;
     }
   </style>
 </head>
 <body>
-  <div class="navbar">
-    <h1>模拟交易所</h1>
-    <div>账户中心</div>
-  </div>
-
-  <div class="balance-container">
-    <div class="balance-label">USDT 余额</div>
-    <div class="balance-value">8723.00</div>
-  </div>
+  <h1>你好，世界！🌏</h1>
+  <p>这是我使用 GitHub Pages 部署的第一个网页。</p>
 </body>
 </html>
